Version 5.6.0 - 2020-05-04
* Bug fixes (see mercurial logs for details)
* Prevent posting move from statement that is not posted

Version 5.4.0 - 2019-11-04
* Bug fixes (see mercurial logs for details)
* Require fresh session to post a statement

Version 5.2.0 - 2019-05-06
* Bug fixes (see mercurial logs for details)
* Use invoice amount to pay as line amount when creating lines from origins
* Rename Origin field informations to information

Version 5.0.0 - 2018-10-01
* Bug fixes (see mercurial logs for details)
* Use single account for statement journal
* Remove support for Python 2.7

Version 4.8.0 - 2018-04-23
* Bug fixes (see mercurial logs for details)
* Do not check amount to pay when reconcile move lines
* Remove line split by invoice in non company currency
* Use new API for Line.reconcile
* Add button to reconcile statement

Version 4.6.0 - 2017-10-30
* Bug fixes (see mercurial logs for details)
* Add generic wizard to import statement from files
* Add statement origins
* Unreconcile lines when cancelling statement

Version 4.4.0 - 2017-05-01
* Bug fixes (see mercurial logs for details)
* Add statement line number as move description
* Set description on statement account line if unique

Version 4.2.0 - 2016-11-28
* Bug fixes (see mercurial logs for details)
* Manage readonly state on Statement Line

Version 4.0.0 - 2016-05-02
* Bug fixes (see mercurial logs for details)
* Add Python3 support

Version 3.8.0 - 2015-11-02
* Bug fixes (see mercurial logs for details)
* Remove states on statement's date

Version 3.6.0 - 2015-04-20
* Bug fixes (see mercurial logs for details)
* Add support for PyPy
* Add line group model
* Create Move by grouped lines (number, date, party)

Version 3.4.0 - 2014-10-20
* Bug fixes (see mercurial logs for details)
* Add different validation type on journal
* Add explicit name on statement
* Add report to statement
* Add number and sequence on statement line
* Switch journal debit/credit account usage

Version 3.2.0 - 2014-04-21